--- a/test/fixtures/promotions.yml
+++ b/test/fixtures/promotions.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  description: MyText
+  description: MyString
+  company_id: 
 
 two:
-  description: MyText
+  description: MyString
+  company_id: 
