Se agrega postgres a las gemas y la configuración de la base de datos.

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,13 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  host: localhost
+  database: cyberclock
+  username: prueba
+  password: prueba
   pool: 5
+  port: 5432
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
@@ -19,7 +23,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  host: localhost
+  database: cyberclock
+  username: prueba
+  password: prueba
   pool: 5
+  port: 5432
   timeout: 5000
